Implement dau sach API
